@@ -49,6 +49,7 @@
  * - @c "name,loaded,fail" - Name request fails.
  * - @c "overlay,clicked" - A overlay is clicked.
  * - @c "loaded" - when a map is finally loaded. @since 1.7
+ * - @c "language,changed" - the program's language changed
  *
  * Available style for map widget:
  * - @c "default"
